--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!doctype html>
-<html lang="">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>Ayko Geeraert - HTML5 Boilerplate</title>
+        <meta name="description" content="This is my HTML5 Boilerplate.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="msapplication-TileColor" content="#e85e00">
+        <meta name="theme-color" content="#e85e00">
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="manifest" href="site.webmanifest">
+        <meta name="msapplication-TileColor" content="#44c8f5">
+        <meta name="theme-color" content="#44c8f5">
     </head>
     <body>
         <header>
