--- a/index.html
+++ b/index.html
@@ -14,19 +14,33 @@
         <link rel="manifest" href="site.webmanifest">
         <meta name="msapplication-TileColor" content="#44c8f5">
         <meta name="theme-color" content="#44c8f5">
+        <link rel="stylesheet" href="css/screen.css">
+        <link rel="stylesheet" href="css/normalize.css">
     </head>
     <body>
         <header>
             <h1>Hello world! This is my HTML5 boilerplate.</h1>
+            <nav>
+                <ul>
+                  <li><a href="#heading2">Heading 2</a></li>
+                  <li><a href="#heading3">Heading 3</a></li>
+                  <li><a href="#headingTable">Table</a></li>
+                  <li><a href="#headingLists">Lists</a></li>
+                </ul>
+            </nav>
             <p>A Boilerplate helps you build fast, robust, and adaptable web apps or sites. Kick-start your project with the combined knowledge and effort of 100s of developers, all in one little package.</p>
         </header>
-        <h2>
+        <h2 id="heading2">
             Heading 2
         </h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a <a href="test.com">standard link</a> distinctio facilis excepturi, reprehenderit pariatur odit, velit mollitia saepe impedit reiciendis omnis quasi sed, facere quo nobis a blanditiis.
         </p>
-        <h3>
+        <figure>
+            <img src="img/yawning-cat.jpeg" alt="Image of a yawning cat">
+            <figcaption>Yawning cat by some photographer</figcaption>
+        </figure>
+        <h3 id="heading3">
             Heading 3
         </h3>
         <p>
@@ -37,9 +51,47 @@
                 A blockquote is a large quotation. The content of a blockquote element must include block-level elements such as headings, lists, paragraphs or div’s. This element can also have an optional attribute cite that specifies the location (in the form of a URI) where the quote has come from.
             </p>
         </blockquote>
-        <h3>
+        <h2 id="headingTable">Table</h2>
+        <table>
+            <tr>
+                <th>Country</th>
+                <th>Capital</th>
+                <th>Population</th>
+                <th>Language</th>
+            </tr>
+            <tr class="odd">
+                <td>USA</td>
+                <td>Washington, D.C.</td>
+                <td>309 million</td>
+                <td>English</td>
+            </tr>
+            <tr>
+                <td>Sweden</td>
+                <td>Stockholm</td>
+                <td>9 million</td>
+                <td>Swedish</td>
+            </tr>
+            <tr class="odd">
+                <td>France</td>
+                <td>Paris</td>
+                <td>10 million</td>
+                <td>French</td>
+            </tr>
+            <tr>
+                <td>Germany</td>
+                <td>Berlin</td>
+                <td>9 million</td>
+                <td>German</td>
+            </tr>
+        </table>
+        <h3 id="headingLists">
             Styling lists is easy
         </h3>
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, architecto!</li>
+            <li>Expedita amet quod aliquid dolorum ipsa eos corrupti reiciendis modi.</li>
+            <li>Dolore ipsam animi officia maxime quibusdam maiores quam quisquam dolores.</li>
+        </ul>
         <p>
             Add an unorderd list with 3 list items here
         </p>
