--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
         <title>Ayko Geeraert - HTML5 Boilerplate</title>
         <meta name="description" content="This is my HTML5 Boilerplate.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="msapplication-TileColor" content="#44c8f5">
-        <meta name="theme-color" content="#44c8f5">
+        <meta name="msapplication-TileColor" content="#e85e00">
+        <meta name="theme-color" content="#e85e00">
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
         <link rel="manifest" href="site.webmanifest">
-        <meta name="msapplication-TileColor" content="#44c8f5">
-        <meta name="theme-color" content="#44c8f5">
+        <link rel="mask-icon" href="safari-pinned-tab.svg" color="#e85e00">
         <link rel="stylesheet" href="css/screen.css">
         <link rel="stylesheet" href="css/normalize.css">
     </head>
@@ -51,7 +50,15 @@
                 A blockquote is a large quotation. The content of a blockquote element must include block-level elements such as headings, lists, paragraphs or div’s. This element can also have an optional attribute cite that specifies the location (in the form of a URI) where the quote has come from.
             </p>
         </blockquote>
-        <h2 id="headingTable">Table</h2>
+        <h2 id="lists">
+            Styling lists is easy
+        </h2>
+        <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, nesciunt.</li>
+            <li>Vel eveniet, eum error expedita. Iste voluptate libero, beatae praesentium!</li>
+            <li>Quibusdam beatae, laborum aliquam debitis cum temporibus commodi a. Eos?</li>
+        </ul>
+        <h2 id="tables">Tables</h2>
         <table>
             <tr>
                 <th>Country</th>
@@ -65,7 +72,7 @@
                 <td>309 million</td>
                 <td>English</td>
             </tr>
-            <tr>
+            <tr class="even">
                 <td>Sweden</td>
                 <td>Stockholm</td>
                 <td>9 million</td>
@@ -77,24 +84,13 @@
                 <td>10 million</td>
                 <td>French</td>
             </tr>
-            <tr>
+            <tr class="even">
                 <td>Germany</td>
                 <td>Berlin</td>
                 <td>9 million</td>
                 <td>German</td>
             </tr>
         </table>
-        <h3 id="headingLists">
-            Styling lists is easy
-        </h3>
-        <ul>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, architecto!</li>
-            <li>Expedita amet quod aliquid dolorum ipsa eos corrupti reiciendis modi.</li>
-            <li>Dolore ipsam animi officia maxime quibusdam maiores quam quisquam dolores.</li>
-        </ul>
-        <p>
-            Add an unorderd list with 3 list items here
-        </p>
         <hr>
         <footer>
             <p>By <strong>Your name</strong></p>
